# multiverse_simulator

./: Cargo.toml  LICENSE  multiverse_nodes.sqlite  people_db.sqlite  universe.sqlite  universe_store.sqlite
src/: handle.rs  main.rs  multiverse.rs  multiverse_manager.rs  simulation.rs  store.rs  timeline.rs
