[package]
name = "multiverse_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
physical_constants = "0.5.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
